fix(21): orchestrator correction to plan metadata

--- a/.planning/phases/21-bom-integration-shop-checklist/21-03-PLAN.md
+++ b/.planning/phases/21-bom-integration-shop-checklist/21-03-PLAN.md
@@ -29,9 +29,9 @@ must_haves:
       exports: ["PATCH"]
   key_links:
     - from: "src/lib/components/cutlist/ManualPlacement.svelte"
-      to: "svelte-dnd-action"
-      via: "use:dndzone directive"
-      pattern: "use:dndzone"
+      to: "native HTML5 drag-drop"
+      via: "ondragstart/ondragover/ondrop event handlers"
+      pattern: "ondrop.*handleDrop"
     - from: "src/lib/components/cutlist/ManualPlacement.svelte"
       to: "/api/cutlist/[id]/cuts/[cutId]"
       via: "fetch PATCH for assignment"
